@@ -4,8 +4,8 @@
  * @author sogoel
  * @summary Test generation of warnings when '_' is used an identifier
  * @compile/fail/ref=IdentifierTest8.out --release 8 -Werror -XDrawDiagnostics -Xlint:-options IdentifierTest.java
- * @compile/fail/ref=IdentifierTest9.out -XDrawDiagnostics IdentifierTest.java
- * @compile/fail/ref=IdentifierTest21.out -source ${jdk.version} --enable-preview -XDrawDiagnostics IdentifierTest.java
+ * @compile/fail/ref=IdentifierTest9.out --release 9 -XDrawDiagnostics IdentifierTest.java
+ * @compile/fail/ref=IdentifierTest22.out -XDrawDiagnostics IdentifierTest.java
  */
 
 import java.util.List;
